--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_inicio"
+            android:icon="@mipmap/ic_home_white_36dp"
+            android:title="@string/inicio" />
+        <item
             android:id="@+id/nav_favorecido"
             android:icon="@mipmap/ic_person_white_36dp"
             android:title="@string/favorecido" />
