--- a/app/src/main/res/layout/fragment_favorecido.xml
+++ b/app/src/main/res/layout/fragment_favorecido.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     tools:context="br.com.eber.totalfinancas.FavorecidoFragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
