--- a/app/src/main/res/layout/activity_favorecido.xml
+++ b/app/src/main/res/layout/activity_favorecido.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="br.com.eber.totalfinancas.FavorecidoActivity">
+    tools:context="br.com.eber.totalfinancas.activities.FavorecidoActivity">
 
 </LinearLayout>
