--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.eber.totalfinancas.InicioFragment">
+    tools:context="br.com.eber.totalfinancas.fragments.InicioFragment">
 
 </android.support.design.widget.CoordinatorLayout>
 
