--- a/app/src/main/res/layout/activity_favorecido.xml
+++ b/app/src/main/res/layout/activity_favorecido.xml
@@ -4,6 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context="br.com.eber.totalfinancas.activities.FavorecidoActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nome" />
+
+    <EditText
+        android:id="@+id/etNome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapCharacters" />
+
+    <CheckBox
+        android:id="@+id/cbAtivo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ativo" />
 
 </LinearLayout>
